# models/orderModel.js
@@ -1,5 +1,8 @@
 import mongoose from "mongoose";
 import uniqueValidator from "mongoose-unique-validator";
+import { config } from "dotenv";
+
+config();
 
 const { Schema } = mongoose;
 
@@ -51,7 +54,81 @@ let orderSchema = new Schema(
         },
         priceOrder: {
             type: Number,
-            required: true
+            required: true,
+            default: function () {
+              return (this.itemsPrice * this.numberPieces) + this.shippingPrice + this.taxPrice;
+            }
+        },
+        shippingAddress: {
+            fullName: {
+              type: String,
+              required: true
+            },
+            address: {
+              type: String,
+              required: true
+            },
+            phone: {
+              type: Number,
+              required: true
+            },
+            city: {
+              type: String,
+              required: true
+            },
+            postalCode: {
+              type: String,
+              required: true
+            },
+            country: {
+              type: String,
+              required: true
+            },
+            location: {
+              lat: Number,
+              lng: Number,
+              address: String,
+              name: String,
+              vicinity: String,
+              googleAddressId: String,
+            },
+        },
+        shippingPrice: {
+            type: Number,
+            required: true,
+            default: function() {
+                const perPiece =  process.env.SHIPPING_PER_PIECE;
+                const shippingPrice = this.numberPieces * perPiece;
+                return shippingPrice
+            }
+        },
+        paymentMethod: {
+          type: String,
+          required: true,
+          default: "Cash"
+        },
+        isDelivered: {
+          type: Boolean,
+          required: false,
+          default: false
+        },
+        isPaid: {
+          type: Boolean,
+          default: false
+        },
+        paymentResult: {
+          id: String,
+          status: Boolean,
+          update_time: String,
+          email_address: String,
+        },
+        paidAt: {
+          type: Date
+        },
+        taxPrice: {
+          type: Number,
+          required: true,
+          default: process.env.TAX_PRICE
         }
     }, {timestamps: true}
 );
